--- a/app/views/settings/payments/receipt.html.erb
+++ b/app/views/settings/payments/receipt.html.erb
@@ -112,7 +112,7 @@ table.list .center {
       <tbody>
         <tr>
           <td class="left"><%= Time.at( @invoice.date ).to_date %></td>
-          <td class="left"><%= @invoice.lines.subscriptions.first.plan.name %></td>
+          <td class="left"><%= @invoice.lines.data.first.plan.name %></td>
           <td class="right">
             <% one_percent = @invoice.total / 10000.0 %>
             Price: <%= sprintf("%.2f", (one_percent * 81) ) %> <%= @invoice.currency.upcase %><br/>
