--- a/app/views/settings/plan/index.html.erb
+++ b/app/views/settings/plan/index.html.erb
@@ -5,12 +5,12 @@
 <div class="span8" >
 
   <div class="row content_header_def" >
-    Plans & Pricing
+    Plans &amp; Pricing - Manage your subscription here
   </div>
 
   <div class="span8 content" >
     <p>
-      Update your plan to monitor private projects. Open source projects are for free.
+      Open source projects are for free!
     </p>
     <hr />
     <%= render "/shared/pricing" %>
