--- a/app/views/settings/billing/_billing_fields.html.erb
+++ b/app/views/settings/billing/_billing_fields.html.erb
@@ -1,23 +1,38 @@
 
+<script type="text/javascript">
+  function handleAddressType(type){
+    element = document.getElementById("company_fields")
+    if (type == "<%= BillingAddress::A_TYPE_INDIVIDUAL %>"){
+      element.style.display = "none"
+    }
+    if (type == "<%= BillingAddress::A_TYPE_COROPORATE %>"){
+      element.style.display = "block"
+    }
+  }
+</script>
+
 <div class="control-group">
-  <%= label_tag :name, "Name", :class => "control-label-big", :for => "name" %>
+  <%= label_tag :type, "Type", :class => "control-label-big", :for => "following_products" %>
   <div class="controls" style="margin-left: 155px;">
-    <input type="text" size="20" autocomplete="off" class="round" id="name" name="name" value="<%= @billing_address.name %>" /> *
-    <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :name} %>
+    <select name="type" id="type" onchange="handleAddressType(this.value);" >
+      <option value="<%= BillingAddress::A_TYPE_INDIVIDUAL %>"  <%= "selected" if @billing_address.type == BillingAddress::A_TYPE_INDIVIDUAL %> >Individual</option>
+      <option value="<%= BillingAddress::A_TYPE_COROPORATE %>"  <%= "selected" if @billing_address.type == BillingAddress::A_TYPE_COROPORATE %> >Corporation</option>
+    </select>
   </div>
 </div>
 
 <div class="control-group">
-  <%= label_tag :name, "Company", :class => "control-label-big", :for => "company" %>
+  <%= label_tag :name, "Name", :class => "control-label-big", :for => "name" %>
   <div class="controls" style="margin-left: 155px;">
-    <input type="text" size="20" autocomplete="off" class="round" id="company" name="company" value="<%= @billing_address.company %>" />
+    <input type="text" size="20" autocomplete="off" class="round" id="name" name="name" value="<%= @billing_address.name %>" />
+    <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :name} %>
   </div>
 </div>
 
 <div class="control-group">
   <%= label_tag :street, "Street", :class => "control-label-big", :for => "street" %>
   <div class="controls" style="margin-left: 155px;">
-    <input type="text" size="20" autocomplete="off" class="round" id="street" name="street" value="<%= @billing_address.street %>" /> *
+    <input type="text" size="20" autocomplete="off" class="round" id="street" name="street" value="<%= @billing_address.street %>" />
     <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :street} %>
   </div>
 </div>
@@ -25,7 +40,7 @@
 <div class="control-group">
   <%= label_tag :zip_code, "Zip / City", :class => "control-label-big", :for => "zip_code" %>
   <div class="controls" style="margin-left: 155px;">
-    <input type="text" size="20" autocomplete="off" class="round" id="zip_code" name="zip_code" style="width: 40px;" value="<%= @billing_address.zip %>" /> / <input type="text" size="20" autocomplete="off" class="round" id="city" name="city" style="width: 140px;" value="<%= @billing_address.city %>" /> *
+    <input type="text" size="20" autocomplete="off" class="round" id="zip_code" name="zip_code" style="width: 40px;" value="<%= @billing_address.zip %>" /> / <input type="text" size="20" autocomplete="off" class="round" id="city" name="city" style="width: 140px;" value="<%= @billing_address.city %>" />
     <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :city} %>
   </div>
 </div>
@@ -33,7 +48,30 @@
 <div class="control-group">
   <%= label_tag :country, "Country", :class => "control-label-big", :for => "country" %>
   <div class="controls" style="margin-left: 155px;">
-    <input type="text" size="20" autocomplete="off" class="round" id="country" name="country" value="<%= @billing_address.country %>" /> *
+    <select id="country" name="country" >
+      <% BillingAddress::A_COUNTRIES.keys.each do |key| %>
+        <option value="<%= key %>"  <%= "selected" if @billing_address.country.eql?(key) %> ><%= BillingAddress::A_COUNTRIES[key] %></option>
+      <% end %>
+    </select>
     <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :country} %>
+  </div>
+</div>
+
+<% display_style = "none" %>
+<% display_style = "block" if @billing_address.type == BillingAddress::A_TYPE_COROPORATE %>
+<div id="company_fields" style="display: <%= display_style %>;">
+  <div class="control-group" >
+    <%= label_tag :name, "Company", :class => "control-label-big", :for => "company" %>
+    <div class="controls" style="margin-left: 155px;">
+      <input type="text" size="20" autocomplete="off" class="round" id="company" name="company" value="<%= @billing_address.company %>" />
+      <%= render :partial => 'shared/input_error', :locals => {:model => @billing_address, :key => :company} %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= label_tag :taxid, "Tax ID", :class => "control-label-big", :for => "company" %>
+    <div class="controls" style="margin-left: 155px;">
+      <input type="text" size="20" autocomplete="off" class="round" id="taxid" name="taxid" value="<%= @billing_address.taxid %>" />
+    </div>
   </div>
 </div>
