--- a/app/views/settings/creditcard/index.html.erb
+++ b/app/views/settings/creditcard/index.html.erb
@@ -13,7 +13,7 @@
 
     <p >
       <a href="https://stripe.com" target="stripe">Stripe.com</a> is our Payment Provider.
-      <b>VersionEye doesn't store any Credit Card data.</b>
+      <b>VersionEye doesn't store any Credit Card data!</b>
     </p>
     <div>
       <%= image_tag "ccs.png" %>
