--- a/app/views/settings/plan/index.html.erb
+++ b/app/views/settings/plan/index.html.erb
@@ -13,6 +13,6 @@
       Open source projects are for free!
     </p>
     <hr />
-    <%= render "/shared/pricing" %>
+    <%= render "pricing" %>
   </div>
 </div>
