--- a/app/views/settings/payments/receipt.html.erb
+++ b/app/views/settings/payments/receipt.html.erb
@@ -68,9 +68,11 @@ table.list .center {
 }
 </style>
 
+<% billing_address = current_user.billing_address %> 
+
   <p>
     <br />
-    Dear <%= @billing_address.try(:name) %>,<br />
+    Dear <%= billing_address.try(:name) %>,<br />
     <br />
     This is a receipt for your VersionEye subscription.
   </p>
@@ -85,10 +87,10 @@ table.list .center {
     <tbody>
       <tr>
         <td class="left">
-          <%= @billing_address.name %><br/>
-          <%= @billing_address.street %><br/>
-          <%= @billing_address.zip %> <%= @billing_address.city %><br/>
-          <%= @billing_address.country %>
+          <%= billing_address.name %><br/>
+          <%= billing_address.street %><br/>
+          <%= billing_address.zip %> <%= billing_address.city %><br/>
+          <%= billing_address.country %>
         </td>
         <td class="right">
           VersionEye GmbH<br />
@@ -109,10 +111,19 @@ table.list .center {
       </tr>
     </thead>
     <% if @invoice %>
+      <%
+      plan_name = ''
+      begin
+        plan_name = @invoice.lines.data.first.plan.name
+      rescue => e
+        plan_name = @invoice.lines.subscriptions.first.plan.name
+      end
+
+      %>
       <tbody>
         <tr>
           <td class="left"><%= Time.at( @invoice.date ).to_date %></td>
-          <td class="left"><%= @invoice.lines.data.first.plan.name %></td>
+          <td class="left"><%= plan_name %></td>
           <td class="right">
             <% one_percent = @invoice.total / 10000.0 %>
             Price: <%= sprintf("%.2f", (one_percent * 81) ) %> <%= @invoice.currency.upcase %><br/>
