--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -18,7 +18,7 @@
 
     <% if !Rails.env.enterprise? %>
       <li><%= link_to 'Plans & Pricing'    , settings_plans_path %></li>
-      <li><%= link_to 'Payments'           , settings_payments_path %></li>
+      <li><%= link_to 'Payment History'    , settings_payments_path %></li>
       <li><%= link_to 'Billing Address'    , settings_billing_path %></li>
     <% end %>
 
@@ -29,7 +29,5 @@
     <li><%= link_to 'API Key'            , settings_api_path %></li>
     <li><%= link_to 'Delete'             , settings_delete_path %></li>
   <% end %>
-
-
 
 </ul>
