Add back link to Homepage on password forget page

--- a/app/views/users/iforgotmypassword.html.erb
+++ b/app/views/users/iforgotmypassword.html.erb
@@ -1,6 +1,7 @@
 <% title 'I forgot my password' %>
 
 <% if flash[:success].nil? %>
+
 	<div class="row">
 		<%= form_tag('/resetpassword', :method => 'post', :class => 'form-horizontal') do  %>
 
@@ -27,4 +28,9 @@
 
 		<% end %>
 	</div>
+
+<% else %>
+
+	<a href="/">Back to Homepage</a>
+
 <% end %>
