--- a/app/assets/javascripts/google.js.erb
+++ b/app/assets/javascripts/google.js.erb
@@ -1,6 +1,6 @@
 
 var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-32702672-1']);
+_gaq.push(['_setAccount', '<%= Settings.instance.ga_account %>']);
 _gaq.push(['_trackPageview']);
 
 (function() {
