Handle the logo right for enterprise env

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,11 @@
       <div class="span4 main_logo" >
         <div class="pull-left l_margin_top_15">
           <% if signed_in? %>
-            <%= link_to image_tag('logos/versioneye-transparent.png'), user_projects_path %>
+            <% if Rails.env.enterprise? %>
+              <%= link_to image_tag('logos/versioneye-transparent.png'), settings_emails_path %>
+            <% else %>
+              <%= link_to image_tag('logos/versioneye-transparent.png'), user_projects_path %>
+            <% end %>
           <% else %>
             <a href="/" ><%= image_tag "logos/versioneye-transparent.png" %></a>
           <% end %>
