--- a/app/views/settings/globalsettings/index_nexus.html.erb
+++ b/app/views/settings/globalsettings/index_nexus.html.erb
@@ -20,7 +20,7 @@
       <div class="control-group">
         <%= label_tag :nexus_url, "Nexus URL", :class => "control-label", :for => "nexus_url" %>
         <div class="controls">
-          <%= text_field_tag :nexus_url, @globalsetting.nexus_url, :id => "nexus_url" %>
+          <%= text_field_tag :nexus_url, @globalsetting['nexus_url'], :id => "nexus_url" %>
         </div>
       </div>
 
