Add line break after each repository

--- a/app/views/products/helpers/_composer_snippet.html.erb
+++ b/app/views/products/helpers/_composer_snippet.html.erb
@@ -31,7 +31,7 @@
       </div>
       <div class="span5 download_area" style="width: 409px;" >
         <% repos.each do |repo|  %>
-          <a title="<%= repo.src %> download" href="<%= repo.src %>"><%= repo.src %></a>
+          <a title="<%= repo.src %> download" href="<%= repo.src %>"><%= repo.src %></a><br/>
         <% end %>
       </div>
     </div>
