BugFix for nil model

--- a/app/views/shared/_input_error.html.erb
+++ b/app/views/shared/_input_error.html.erb
@@ -1,4 +1,4 @@
-<% if model.errors && model.errors.messages[key] %>
+<% if model && model.errors && model.errors.messages && model.errors.messages[key] %>
   <span style="color: red">
     <%= model.errors.messages[key].join(' - ') %>
   </span>
